# auction_lots

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_admin.py  0003_digest_template.py  0004_parser_run_telemetry.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  deps.py  favorites.py  filters.py  internal.py  lots.py  media.py  meta.py  notifications.py  telegram.py
backend/app/core/: admin_bootstrap.py  config.py  errors.py  log_buffer.py  logging.py  security.py
backend/app/db/: base.py  session.py  types.py
backend/app/models/: __init__.py  admin_audit_log.py  bot_heartbeat.py  category.py  digest_template.py  favorite.py  lot.py  notification_log.py  outbox.py  parser_run.py  refresh_token.py  region.py  saved_filter.py  user.py
backend/app/scheduler/: __init__.py  tasks.py
backend/app/schemas/: auth.py  common.py  favorite.py  filter.py  lot.py  meta.py  notification.py  telegram.py
backend/app/services/: audit_service.py  auth_service.py  digest_service.py  favorite_service.py  filter_service.py  ingest_service.py  lot_service.py  media_prefetch.py  media_proxy.py  notification_service.py  telegram_service.py
backend/tests/: conftest.py  test_admin_auth.py  test_admin_bootstrap.py  test_admin_bot_send.py  test_admin_db_console.py  test_admin_digest.py  test_admin_logs.py  test_admin_outbox.py  test_admin_users.py  test_auth.py  test_digest.py  test_favorites.py  test_filters.py  test_ingest.py  test_internal_api.py  test_internal_bot_endpoints.py  test_lots.py  test_media.py  test_media_prefetch.py  test_meta.py  test_notifications_test.py  test_telegram.py
bot/: Dockerfile  README.md  pyproject.toml
bot/bot/: __init__.py  config.py  main.py
bot/bot/handlers/: __init__.py  start.py
bot/bot/services/: __init__.py  backend_client.py  heartbeat.py  log_forwarder.py  outbox_poller.py
bot/tests/: conftest.py  test_backend_client_ack.py  test_heartbeat.py  test_log_forwarder.py  test_outbox_poller.py  test_start.py
parser/: README.md  pyproject.toml
parser/fixtures/efrsb/: list_page1.json  lot_card.json
parser/fixtures/torgi/: lot_card.json  search_response.json
parser/parser/: __init__.py  __main__.py  base.py  cli.py  normalizer.py
parser/tests/: conftest.py  test_efrsb.py  test_normalizer.py  test_torgi.py
(+65 files in other folders)
