[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenders-bot"
version = "0.1.0"
description = "Telegram-бот агрегатора торгов (aiogram 3)"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4",
    "httpx>=0.27",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
