[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenders-parser"
version = "0.1.0"
description = "Парсер лотов с электронных торговых площадок (ЕФРСБ, torgi.gov.ru)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
tenders-parser = "parser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["parser*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
